# All work is done in subdirectories.  Note that build order
# corresponds to the order in which directories are listed here.

include $(top_srcdir)/config/Makefile.am.include

MAINTAINERCLEANFILES += aclocal.m4 configure.scan autoscan.log config.h.in~

# NB! Remember to update AC_CONFIG_FILES in configure.ac as well.
SUBDIRS = src include

